--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -14,6 +14,7 @@
             android:id="@+id/BtnRecord"
             android:text="@string/record"
             android:textColor="#fff"
+            android:enabled="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
